# spaceGame

./: .gitignore  .travis.yml  Background.cpp  Background.hpp  CMakeLists.txt  Game.cpp  Game.hpp  Inertia.cpp  Inertia.hpp  Makefile  README.md  SpaceGame.files  SpaceShip.cpp  SpaceShip.hpp  application.cpp  application.hpp  background.cpp  background.hpp  colorschema.cpp  colorschema.hpp  common.cpp  common.hpp  conanfile.txt  explosion.cpp  explosion.hpp  game.cpp  game.hpp  main.cpp  skeleton.cpp  skeleton.hpp  space_object.cpp  space_object.hpp  space_ship.cpp  space_ship.hpp  speed.cpp  speed.hpp
figure/: error_drawing.hpp  exception.hpp  factory_shape.cpp  factory_shape.hpp  line.cpp  line.hpp  point.cpp  point.hpp  polygon.cpp  polygon.hpp  rectangle.cpp  rectangle.hpp
gravity/: gravity.hpp
primitive/: color.hpp  line.cpp  line.hpp  point.cpp  point.hpp  size.hpp  time.hpp
scene/: scene.hpp  sdl_scene.cpp  sdl_scene.hpp
space/: asteroid.cpp  asteroid.hpp  background.hpp  explosion.cpp  explosion.hpp  gravity.cpp  gravity.hpp  grid.hpp  life_amount.hpp  nozzle.cpp  nozzle.hpp  object.hpp  projectile.cpp  projectile.hpp  ship.cpp  ship.hpp
